--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Conversor - Binario para Decimal</title>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" href="js/bootstrap.min.js"></script>
 </head>
+
 <body>
-    <h1>Converter Numero Binário para Decimal</h1>
-    <form method="dialog">
-        <label for="binary">
-            Binario:
-            <input type="number" name="binary">
-        </label>
-        <label for="Decimal">
-            Decimal:    
-            <input type="number" disabled name="decimal">
-        </label>
-        <button>Converter</button>
-    </form>
+    <div class="container">
+        <div class="card mt-4">
+            <div class="card-header text-center">
+                <h1>Conversor de Binário para Decimal</h1>
+            </div>
+            <div class="card-body">
+                <form method="dialog">
+
+                    <div class="row mb-3">
+                        <div class="col-lg-3">
+                            <label for="binary">
+                                Binario:
+                            </label>
+                        </div>
+                        <div class="col-lg-9">
+                            <input type="number" name="binary">
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-lg-3">
+                            <label for="Decimal">
+                                Decimal:
+                            </label>
+                        </div>
+                        <div class="col-lg-9">
+                            <input type="number" disabled name="decimal">
+                        </div>
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <button type="button" class="btn btn-dark btn-lg">Converter</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <script src="code.js"></script>
 
 </body>
+
 </html>
